# cs61c

./: .gitignore.orig  CMakeLists.txt  README.md  README.md.orig  _BACKUP_30577.gitattributes
lab00/: code.py  code.py.orig
lab01/exercise1/: a.out  ex1  ex1.c  ex1.c.orig
lab01/exercise2/: pwd_checker  pwd_checker.c  pwd_checker.c.orig
lab01/exercise3/: ex3  linked_list.c.orig
lab02/: Makefile.orig  bit_ops.c  bit_ops.c.orig  linked_list.c  linked_list.c.orig  vector.c  vector.c.orig
lab03/: factorial.s  factorial.s.orig  list_map.s  list_map.s.orig
lab04/: cc_test.s  cc_test.s.orig  discrete_fn.s  discrete_fn.s.orig  megalistmanips.s  megalistmanips.s.orig
lab05/: ex2.circ  ex3.circ  ex4.circ
lab06/: ex1.circ  ex2.circ  ex4.circ
lab06/tests/student-output/: .ex4-test.out.swp
lab08/: simd  simd.c
lab09/: dotp  omp_apps.c  v_add
proj1/: README.md  snake.c  state.c
proj2/: .unittests.py.swp  studenttests.py
proj2/src/: abs.s  argmax.s  classify.s  dot.s  matmul.s  read_matrix.s  relu.s  write_matrix.s
